--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+  width: 100vw;
+  min-height: 100vh;
+}
+
+input {
+  outline: none;
+}
+
+select {
+  outline: none;
+}
